--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "<img width=\"548\" alt=\"Screenshot 2023-10-13 at 10 37 21 PM\" src=\"https://github.com/Surbhi-Kohli/nodejsTut/assets/32058209/132b8081-65c1-4e20-8b04-6fbbde70d18a\"> REPL and cli",
   "main": "10-fs-sync.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Surbhi-Kohli/nodejsTut/issues"
   },
-  "homepage": "https://github.com/Surbhi-Kohli/nodejsTut#readme"
+  "homepage": "https://github.com/Surbhi-Kohli/nodejsTut#readme",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
